# coffee-crossword

./: .gitignore  CLAUDE.md  DICTIONARY_FORMAT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
dictionaries/: english.tsd  english.txt
docs/: tsd0_research.md
docs/claude/: api-reference.md  architecture.md  decisions.md  implementation-notes.md  status.md  testing.md  word-lists.md
docs/tea-original-help/: tsbuild1.tsd  tsbuild1.txt  tsbuild2.tsd  tsbuild2.txt
docs/tea-original-help/TEA/: #IDXHDR  #IVB  #STRINGS  #SYSTEM  #TOPICS  #URLSTR  #URLTBL  #WINDOWS  tea.hhc  tea.hhk
docs/tea-original-help/TEA/$WWKeywordLinks/: BTree  Data  Map
docs/tea-original-help/TEA/html/: anagram_balances.htm  anagrams.htm  choice_lists.htm  console.htm  contact.htm  conventions.htm  def_anagram.htm  def_annotation.htm  def_applicationkey.htm  def_choice_list.htm  def_citation.htm  def_countdown.htm  def_cryptogram.htm  def_dictionary.htm  def_dictionary_definition.htm  def_dictonary_list.htm  def_diplogram.htm  def_electronic.htm  def_enumeration.htm  def_escape_character.htm  def_haplogram.htm  def_headword.htm  def_isogram.htm  def_letter_variable.htm  def_macro.htm  (+153 more)
src/: App.tsx  DictionaryPanel.tsx  ExternalLookupPanel.tsx  ResultsColumn.tsx  WordListDrawer.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  dedup.rs  engine.rs  lib.rs  registry.rs
src-tauri/src/engine/: ast.rs  describe.rs  grouping.rs  matcher.rs  mod.rs  normalize.rs  parser.rs  test_utils.rs  tests.rs
